# deresize

./: LICENSE  README.md  pyproject.toml
deresize/: __init__.py  deresizer.py  helper.py
deresize/models/: clip.py  dinov2.py  head.py  mae.py  siglip.py  vit.py
training/: dataset.py  distributed.py  scheduler.py  train.py
